--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,14 +1,30 @@
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <link rel="stylesheet" href="/css/jquery-ui.min.css">
-  <link rel="stylesheet" href="/doorbot.css">
-  <script src="/js/jquery.js"></script>
-  <script src="/js/jquery-ui.min.js"></script>
-  <script src="/js/jquery-ui.touch-punch.min.js"></script>
-  <script src="/doorbot.js"></script>
-  <%= yield_content :head %>
-</head>
-<body>
-  <%= yield %>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Pixelbot</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/bootstrap-slider.css" rel="stylesheet">
+
+    <link href="css/pixelbot.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="container">
+      <%= yield %>
+    </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap-slider.min.js"></script>
+
+    <script src="js/pixelbot.js"></script>
+  </body>
 </html>
