--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<% content_for :head do %>
+<% content_for :end_of_body do %>
   <script>
     var brightness_req = null;
     var color_req = null;
@@ -31,47 +31,35 @@
         }
       });
 
-      $.each(["#red", "#green", "#blue"], function(ii, value) {
-        $(value).on("slide", function(event, ui) {
-          if (color_req == null) {
-            var color = get_color();
-            color[value.substring(1)] = ui.value;
-            color_req = $.post("/set_color", color,
-              function( data, status, xhr ) {
-                $("#red-value").val(data.red);
-                $("#green-value").val(data.green);
-                $("#blue-value").val(data.blue);
-                color_req = null;
-              }
-            );
-          }
-        });
-      });
     });
   </script>
 <% end %>
 
-<table>
-<tbody>
-  <tr>
-    <td>Brightness</td>
-    <td><div id="brightness" class="color-slider"></div></td>
-    <td><input id="brightness-value" class="color-value" value="255"></td>
-  </tr>
-  <tr>
-    <td>Red</td>
-    <td><div id="red" class="color-slider"></div></td>
-    <td><input id="red-value" class="color-value"></td>
-  </tr>
-  <tr>
-    <td>Green</td>
-    <td><div id="green" class="color-slider"></div></td>
-    <td><input id="green-value" class="color-value"></td>
-  </tr>
-  <tr>
-    <td>Blue</td>
-    <td><div id="blue" class="color-slider"></div></td>
-    <td><input id="blue-value" class="color-value"></td>
-  </tr>
-</tbody>
-</table>
+<div class="page-header">
+  <h1>Pixelbot</h1>
+</div>
+
+<div class="well clearfix">
+  <div class="col-md-4 column">
+    <p>
+      <b>R</b>
+      <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="RC" id="R" data-slider-tooltip="hide" data-slider-handle="round" />
+    </p>
+    <p>
+      <b>G</b>
+      <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="GC" id="G" data-slider-tooltip="hide" data-slider-handle="round" />
+    </p>
+    <p>
+      <b>B</b>
+      <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="BC" id="B" data-slider-tooltip="hide" data-slider-handle="round" />
+    </p>
+    <p>
+      <b>I</b>
+      <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="255" data-slider-id="IC" id="I" data-slider-tooltip="hide" data-slider-handle="round" />
+    </p>
+  </div>
+  <div class="col-md-8 column">
+    <div id="RGB"></div>
+  </div>
+</div>
+
